--- a/js_study/3.html
+++ b/js_study/3.html
@@ -3,41 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <script>
-    var Links = {
-        setColor:function (color) {
-            var alist = document.querySelectorAll('a');
-            var i = 0;
-            while (i < alist.length) {
-                alist[i].style.color = color;
-                i += 1;
-            }
-        }   
-    }
-    var Body = {
-        SetColor:function (color){
-            document.querySelector('body').style.color = color;
-        },
-        SetBackgroundColor:function (color){
-            document.querySelector('body').style.backgroundColor = color;
-        }
-    }
-    function nightDayHandler(self){
-        var target = document.querySelector('body');
-        if (self.value === 'night'){
-            Body.SetBackgroundColor('black');
-            Body.SetColor('white');
-            self.value = 'day';
-            Links.setColor('powderblue');
-
-        } else {
-            Body.SetBackgroundColor('white');
-            Body.SetColor('black');
-            self.value = 'night';
-            Links.setColor('blue');
-            }
-        }
-    </script>
+    <script src="colors.js"></script>
 </head>
 
 <body>
